2008-11-26  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * js/CalDAVAclManager.js remove unnecessary calls
	to dump() and we now correctly set the identity
	of all calendars, even for those we don't own.
	* Bumped the version number to 0.90pre21

2008-11-24  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* chrome/content/sogo-connector/addressbook/edit-list-overlay.js
	We fallback to the messenger window if the ab window isn't available

2008-11-23  Ludovic Marcotte  <lmarcotte@inverse.ca>	

	* chrome/content/sogo-connector/lightning/lightning-calendar-properties-overlay.js
	We now correctly select the menupopup item (first one)
	* Bumped the version number to 0.90pre19

2008-11-16  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* /content/sogo-connector/addressbook/addressbook.groupdav.overlay.js
	Replaced calls to deleteCards() / deleteDirector() with
	deleteSelectedCards() to avoid refresh problems
	* chrome/content/sogo-connector/addressbook/edit-list-overlay.js
	We really get the address book window before trying to perform
	a DAV operation.