@@ -1,81 +1,87 @@
+/* -*- Mode: Java; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
+
 window.gCalendarBundle = {
     getString: function(a) {
-		return a;
-	}
+        return a;
+    }
 };
 
 var SCEnableDelete = false;
 var SCEnableNewItems = true;
 
 function SCCalendarsListOverlayOnLoad() {
-	gCalendarBundle = document.getElementById("SCCalendarStringBundle");
+    gCalendarBundle = document.getElementById("SCCalendarStringBundle");
 
-	calendarController.SCOldCalendarControllerIsCommandEnabled
-		= calendarController.isCommandEnabled;
-	calendarController.isCommandEnabled
-		= window.SCCalendarControllerIsCommandEnabled;
+    calendarController.SCOldCalendarControllerIsCommandEnabled
+        = calendarController.isCommandEnabled;
+    calendarController.isCommandEnabled
+        = window.SCCalendarControllerIsCommandEnabled;
 
-	window.SCOldOnSelectionChanged = calendarController.onSelectionChanged;
-	calendarController.onSelectionChanged = window.SCOnSelectionChanged;
+    window.SCOldOnSelectionChanged = calendarController.onSelectionChanged;
+    calendarController.onSelectionChanged = window.SCOnSelectionChanged;
 
     window.SCOldOnCalendarSelect = calendarListTreeView.onSelect;
     calendarListTreeView.onSelect = window.SCOnCalendarSelect;
 
-	unifinderTreeView.SCOldSetSelectedItems
-		= unifinderTreeView.setSelectedItems;
-	unifinderTreeView.setSelectedItems = window.SCuTVSetSelectedItems;
+    unifinderTreeView.SCOldSetSelectedItems
+        = unifinderTreeView.setSelectedItems;
+    unifinderTreeView.setSelectedItems = window.SCuTVSetSelectedItems;
 
-	var taskTreeView = document.getElementById("calendar-task-tree");
-	taskTreeView.SCOldOnTaskTreeViewSelect = taskTreeView.onselect;
-	taskTreeView.onselect = window.SCOnTaskTreeViewSelect;
+    var taskTreeView = document.getElementById("calendar-task-tree");
+    taskTreeView.SCOldOnTaskTreeViewSelect = taskTreeView.onselect;
+    taskTreeView.onselect = window.SCOnTaskTreeViewSelect;
+
+    var aclObserver = new SCCalDAVACLObserver(this);
+    var observerService = Components.classes["@mozilla.org/observer-service;1"]
+        .getService(Components.interfaces.nsIObserverService);
+    observerService.addObserver(aclObserver, "caldav-acl-loaded", false);
 
     SCComputeEnableNewItems();
 }
 
 function SCCalendarControllerIsCommandEnabled(command) {
-	var result;
-
-	if (command == "calendar_delete_event_command"
+    var result;
+    if (command == "calendar_delete_event_command"
         || command == "calendar_delete_todo_command"
         || command == "button_delete"
         || command == "cmd_delete") {
-		result = (SCEnableDelete
+        result = (SCEnableDelete
                   && this.SCOldCalendarControllerIsCommandEnabled(command));
-	}
+    }
     else if (command == "calendar_new_event_command"
              || command == "calendar_new_todo_command") {
         result = (SCEnableNewItems
                   && this.SCOldCalendarControllerIsCommandEnabled(command));
     }
-	else
-		result = this.SCOldCalendarControllerIsCommandEnabled(command);
+    else
+        result = this.SCOldCalendarControllerIsCommandEnabled(command);
 
-	return result;
+    return result;
 };
 
 function SCComputeEnableDelete(selectedItems) {
-	var firstState = SCEnableDelete;
-	SCEnableDelete = (selectedItems.length > 0);
+    var firstState = SCEnableDelete;
+    SCEnableDelete = (selectedItems.length > 0);
 
-	var aclMgr = Components.classes["@inverse.ca/calendar/caldav-acl-manager;1"]
-		.getService(Components.interfaces.nsISupports)
-		.wrappedJSObject;
+    var aclMgr = Components.classes["@inverse.ca/calendar/caldav-acl-manager;1"]
+        .getService(Components.interfaces.nsISupports)
+        .wrappedJSObject;
 
-	for (var i = 0; i < selectedItems.length; i++) {
-		var calendar = selectedItems[i].calendar;
-		if (calendar.type == "caldav") {
-			var calEntry = aclMgr.calendarEntry(calendar.uri);
-			SCEnableDelete = (calEntry.isCalendarReady()
+    for (var i = 0; i < selectedItems.length; i++) {
+        var calendar = selectedItems[i].calendar;
+        if (calendar.type == "caldav") {
+            var calEntry = aclMgr.calendarEntry(calendar.uri);
+            SCEnableDelete = (calEntry.isCalendarReady()
                               && calEntry.userCanDeleteComponents());
-		}
-	}
+        }
+    }
 
-	if (SCEnableDelete != firstState) {
-		goUpdateCommand("calendar_delete_event_command");
-		goUpdateCommand("calendar_delete_todo_command");
-		goUpdateCommand("button_delete");
-		goUpdateCommand("cmd_delete");
-	}
+    if (SCEnableDelete != firstState) {
+        goUpdateCommand("calendar_delete_event_command");
+        goUpdateCommand("calendar_delete_todo_command");
+        goUpdateCommand("button_delete");
+        goUpdateCommand("cmd_delete");
+    }
 }
 
 function SCComputeEnableNewItems() {
@@ -97,14 +103,14 @@ function SCComputeEnableNewItems() {
     dump("enable new items: " + SCEnableNewItems + "\n");
     if (SCEnableNewItems != oldValue) {
         dump("updating new commands\n");
-		goUpdateCommand("calendar_new_event_command");
-		goUpdateCommand("calendar_new_todo_command");
+        goUpdateCommand("calendar_new_event_command");
+        goUpdateCommand("calendar_new_todo_command");
     }
 }
 
 function SCOnSelectionChanged(event) {
-	SCComputeEnableDelete(event.detail);
-	window.SCOldOnSelectionChanged(event);
+    SCComputeEnableDelete(event.detail);
+    window.SCOldOnSelectionChanged(event);
 }
 
 function SCOnCalendarSelect(event) {
@@ -114,17 +120,46 @@ function SCOnCalendarSelect(event) {
 }
 
 function SCuTVSetSelectedItems(items) {
-	items = items || currentView().getSelectedItems({});
-	SCComputeEnableDelete(items);
-	this.SCOldSetSelectedItems(items);
-	document.commandDispatcher.updateCommands("calendar_commands");
+    items = items || currentView().getSelectedItems({});
+    SCComputeEnableDelete(items);
+    this.SCOldSetSelectedItems(items);
+    document.commandDispatcher.updateCommands("calendar_commands");
 }
 
 function SCOnTaskTreeViewSelect(event) {
-	SCComputeEnableDelete(this.selectedTasks);
-	return (this.SCOldOnTaskTreeViewSelect
+    SCComputeEnableDelete(this.selectedTasks);
+    return (this.SCOldOnTaskTreeViewSelect
             ? this.SCOldOnTaskTreeViewSelect(event)
             : false);
 }
 
-window.addEventListener("load", SCCalendarsListOverlayOnLoad, false);
+function SCCalDAVACLObserver(parent) {
+    this.parent = parent;
+}
+
+SCCalDAVACLObserver.prototype = {
+    parent: null,
+    
+    observe: function(aSubject, aTopic, aData) {	
+        if (aTopic == "caldav-acl-loaded") {      
+            var tree = parent.document.getElementById("calendar-list-tree-widget");
+            if (tree) {
+                var index = tree.currentIndex;
+                var calendar = parent.calendarListTreeView.getCalendar(index);
+	
+                if (calendar.uri.spec == aData) {
+                    parent.SCOnCalendarSelect({detail:[]});
+                }
+            }
+        }
+    },
+    QueryInterface: function(aIID) {
+        if (!aIID.equals(Components.interfaces.nsIObserver)
+            && !aIID.equals(Components.interfaces.nsISupports))
+            throw Components.results.NS_ERROR_NO_INTERFACE;
+    
+        return this;
+    }
+}
+
+    window.addEventListener("load", SCCalendarsListOverlayOnLoad, false);
